# elixpoagent

./: .env.example  .gitignore  Dockerfile.core  Dockerfile.frontend  docker-compose.yml
agent.elixpo/: package-lock.json
cli/: pyproject.toml
cli-npm/: package.json
cli/elixpo_cli/: __init__.py  config.py  main.py
cli/panda_cli/: __init__.py  config.py  main.py
core/: README.md  pyproject.toml
core/elixpo/: __init__.py  config.py  main.py
core/elixpo/agent/: context.py  engine.py  memory.py  mode.py  prompt.py  session.py  sub_agent.py  workspace.py
core/elixpo/api/: routes.py  ws.py
core/elixpo/data/: d1.py  kv.py
core/elixpo/github/: api.py  app.py  context_loader.py  handler.py  webhooks.py
core/elixpo/llm/: client.py  router.py
core/elixpo/mcp/: base.py  registry.py
core/elixpo/mcp/tools/: directory_tree.py  file_edit.py  file_read.py  file_write.py  git.py  github_tools.py  glob.py  grep.py  memory_tools.py  shell.py  sub_agent_tool.py  task_validate.py  web_search.py
core/panda/: __init__.py  config.py  main.py
core/panda/agent/: context.py  engine.py  memory.py  prompt.py  session.py
core/panda/api/: routes.py  ws.py
core/panda/data/: d1.py  kv.py  models.py
core/panda/github/: api.py  app.py  context_loader.py  handler.py  webhooks.py
core/panda/llm/: client.py  models.py
core/panda/mcp/: base.py  registry.py
core/panda/mcp/tools/: directory_tree.py  file_edit.py  file_read.py  file_write.py  git.py  github_tools.py  glob.py  grep.py  shell.py
core/tests/: test_github.py  test_session.py  test_tools.py
infra/: nginx.conf
workers/: wrangler.toml
workers/src/: index.ts
(+13 files in other folders)
