[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panda-cli"
version = "0.1.0"
description = "Panda AI Agent — CLI tool for autonomous software engineering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "elixpo", email = "elixpoo@gmail.com" },
]
dependencies = [
    "panda-core",
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.scripts]
panda = "panda_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
