[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elixpo-core"
version = "0.1.0"
description = "Elixpo — Autonomous AI Agent Engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "elixpo", email = "elixpoo@gmail.com" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "PyJWT>=2.10.0",
    "cryptography>=44.0.0",
    "structlog>=24.4.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["elixpo"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
